# salesloft-mcp-demo1

./: .gitignore  README.md  claude.md  pyproject.toml  todo.md
docs/: angela_white_interview.md  interview_jennifer_adams.md  interview_marcus_chen.md  interview_sandra_mitchell.md  mcp_spec.md  outline.md  personas.md  prd.md  transcript.md
tests/: __init__.py  test_loader.py  test_search.py  test_server.py
transcripts/: INTERVIEW_TRANSCRIPT_DIANA_ROBINSON.md  Interview_Andrew_Miller_Accounting_Tax_Technology_CRO.md  Interview_Christina_Patel_MedTech_VP_Sales.md  Interview_Daniel_Lee_Clinical_Trials_Tech_CRO.md  Interview_Elizabeth_Morgan_RegTech_VP_Sales.md  Interview_Frank_Wilson_Industrial_IoT_CRO.md  Interview_James_Richardson_Data_Analytics_CRO.md  Interview_Nancy_Chen_Mental_Health_Platform.md  Interview_Patricia_Gonzalez_Integration_Platform_VP_Sales.md  Interview_Sarah_Kim_Developer_Tools_VP_Sales.md  Interview_Stephanie_Clark_Commercial_Lending.md  TRANSCRIPT_SUMMARY.md  customer_interview_charles_davis.md  customer_interview_timothy_brown.md  customer_interview_transcript.md  demo_ecommerce_20250115.md  demo_legal_tech_20250102.md  demo_telecom_nexus_20250115.md  gaming_interview_transcript.md  george_baker_interview_transcript.md  govtech_interview_transcript.md  interview-dr-william-park.md  interview-rebecca-stone.md  interview_amanda_foster.md  interview_anthony_williams.md  interview_christopher_lane.md  interview_christopher_taylor.md  interview_david_okonkwo.md  interview_helen_cooper.md  interview_jennifer_walsh.md  interview_kevin_obrien.md  (+16 more)
(+4 files in other folders)
