[project]
name = "salesloft-mcp"
version = "0.1.0"
description = "MCP server for analyzing sales call transcripts"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "python-frontmatter>=1.0.0",
]

[project.scripts]
salesloft-mcp = "salesloft_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/salesloft_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
